# MilkyWM

./: .gitignore  Cargo.toml  README.md  install.sh
session/: milkywm-session  milkywm.desktop
src/: input.rs  ipc.rs  main.rs  state.rs
src/backend/: drm.rs  headless.rs  mod.rs  winit.rs
src/compositor/: mod.rs  xwayland.rs
src/config/: mod.rs  watcher.rs
src/orbital/: body.rs  camera.rs  layout.rs  mod.rs  workspace.rs
src/render/: frame.rs  gles.rs  mod.rs  space.rs  thumbnail.rs
