[package]
name = "milkywm"
version = "0.1.0"
edition = "2021"
description = "A Wayland compositor with a cosmic space metaphor"
license = "MIT"

[[bin]]
name = "milkywm"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.3", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session",
    "backend_session_logind",
    "backend_winit",
    "desktop",
    "renderer_glow",
    "wayland_protocols_misc",
    "xwayland",
] }

calloop          = { version = "0.12", features = ["executor"] }
wayland-server   = "0.31"
wayland-backend  = { version = "0.3", features = ["server_system"] }
glam = "0.27"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
thiserror = "1"
bitflags  = "2"
bytemuck  = "1"
anyhow    = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
